--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -518,13 +518,14 @@ The `totalBudget` panel consists of 3 UI elements:
 
 *	`BudgetPanel#expenseDisplay` – A `Text` element that displays the user’s current expenses.
 *	`BudgetPanel#budgetDisplay` – A `Text` element that displays the user’s monthly budget cap.
-*	`BudgetPanel#budgetBar` – A `progressBar` element that visually presents the percentage of the current `totalBudget cap that has been used.
+*	`BudgetPanel#budgetBar` – A `progressBar` element that visually presents the percentage of the current
+`totalBudget` cap that has been used.
 
 Given below is an example scenario of how `BudgetPanel` is updated:
 
 . The user launches the application and signs up for a new account. The `MainWindow` creates a new `BudgetPanel`, which elements are initialized as follows:
 * `BudgetPanel#expenseDisplay` is green and set to "$0.00".
-* `BudgetPanel#budgetDisplay` is set to "/ $28.00", with $28.00 being the default ``totalBudget`.
+* `BudgetPanel#budgetDisplay` is set to "/ $28.00", with $28.00 being the default `totalBudget`.
 * `BudgetPanel#budgetBar` is green and at 0% progress.
 
 . The user executes the command `add n/Lunch $/30.00 c/Food`. As the `'add` command modifies the `totalBudget` and
@@ -547,7 +548,7 @@ If the updated percentage is more than 1.0, `BudgetPanel#budgetBar` progress per
 
 . `Timeline#playFromStart()` is called to execute the animation.
 
-. `BudgetPanel#update()` also calls `BudgetPanel#setBudgetUiColors()``. The method detects that the user has gone
+. `BudgetPanel#update()` also calls `BudgetPanel#setBudgetUiColors()`. The method detects that the user has gone
 over budget, and changes the color of `BudgetPanel#expenseDisplay` and `BudgetPanel#budgetBar` from green to red.
 [NOTE]
 Similarly, if the user has gone from over budget to under budget, the color of
@@ -570,7 +571,7 @@ image::implementation/BudgetPanelSequenceDiagram.png[width="800"]
 
 // end::userInterfaceRedesign[]
 
-// tag::totalBudget[]
+// tag::budget[]
 
 === Budget
 ==== Current Implementation
@@ -662,7 +663,6 @@ usage of the expense tracker, but rather provide helpful information. For exampl
  adding an expense, a warning would be displayed in the *Notification center* instead of the area below the command
  box, replacing the success message of adding an expense and confusing the user.
 
-
 ==== Alternatives considered
 Recurrence check was initially implemented via events. Every time `ModelManager#loadUserData()` is called, an event
 will be sent to the `EventBus` to be dispatched to an event handler implemented in `Budget`. However, after heavy
@@ -670,7 +670,7 @@ consideration, the recurrence check should only be called whenever `loadUserData
 else. Therefore, it should be more closely coupled with `loadUserData()` instead of being an event that can be posted
  from anywhere inside the application.
 
-// end::totalBudget[]
+// end::budget[]
 
 === Logging
 
@@ -928,19 +928,19 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 
 |`* * *` |user |have my expenditures saved after closing the app |keep track of my expenditures without having to key in my information again
 
-|`* * *` |forgetful user |receive a notification about my `totalBudget when the application boots up |be reminded of how much I have spent and can spend.
+|`* * *` |forgetful user |receive a notification about my budgetwhen the application boots up |be reminded of how much I have spent and can spend.
 
 |`* * *` |user |exit the application with a keyboard command | exit the application conveniently without reaching for my mouse/touchpad
 
-|`* * *` |impulsive spender |set my maximum `totalBudget over a certain period of time |know when I am or about to spend over my `totalBudget
+|`* * *` |impulsive spender |set my maximum budgetover a certain period of time |know when I am or about to spend over my `totalBudget
 
-|`* * *` |user who has a limited `totalBudget |view my expenses over a certain period of time |learn from my past endeavours and better manage my `totalBudget
+|`* * *` |user who has a limited budget|view my expenses over a certain period of time |learn from my past endeavours and better manage my `totalBudget
 
 |`* * *` |user who wants to save money |separate my expenses into different categories| ee where am I spending more money on and where my expenses go and cut them accordingly
 
 |`* *`| user who shares a computer |add new account/log in to own account |use the application on the same computer as someone else
 
-|`* *` |user who has a monthly allowance |set my `totalBudget based on my monthly allowance |
+|`* *` |user who has a monthly allowance |set my budgetbased on my monthly allowance |
 
 |`* *` |user who spends on the same things frequently |add recurring expenses |do not need to key in the same type of expenditure every month
 |=======================================================================
