Add Project Portfolio Page for Darien (#106)
* Update sequence diagram for `addmeds` to fit the style of the other sequence diagrams
Increase width of sequence diagram image in developer guide

* Update User Guide
Sort commands in User Guide in lexicographical order

* Label all images in User Guide by figure number.
Add references to figure numbers in User Guide.

* Add newline at EOF of UserGuide.adoc to fit checkstyle requirements

* Change format for figure indication

* Standardise capitalisation for "component" and "implementation" across developer guide.
Add figure numbers for images
Standardise capitalisation across title headings
Update class diagrams

* Created my project portfolio page

* Document `select` command in User Guide

--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -328,6 +328,7 @@ image::AddmedsSequenceDiagram.png[width="800"]
 ** Pros: Reduces the number of classes we will have to maintain.
 ** Cons: Reduces the cohesion of the `Prescription` class as it now handles multiple different items e.g. dosage-related information and duration-related information.
 
+// end::addmeds[]
 // tag::addappt[]
 === Addappt
 ==== Current implementation
