--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -341,14 +341,12 @@ Format: `add_all_day_event month/MMM year/YYYY date/DD title/NAME OF EVENT`
 
 Example:
 
-* `add_all_day_event month/Oct year/2018 date/08 title/Hall open day` +
-Adds an all day event titled `Hall open day` into the `OCT-2018.ics` calendar which happens on the `8th` of `Oct`.
-
 Before executing command
 
 image::add_all_day_event_diagram_before.png[width="790"]
 
-After executing command
+* `add_all_day_event month/Oct year/2018 date/08 title/Hall open day` +
+Adds an all day event titled `Hall open day` into the `OCT-2018.ics` calendar which happens on the `8th` of `Oct`.
 
 image::add_all_day_event_diagram_after.png[width="790"]
 
@@ -370,15 +368,13 @@ edate/DD ehour/HH emin/mm title/NAME OF EVENT`
 
 Example:
 
-* `add_event month/Oct year/2018 sdate/10 shour/15 smin/30 edate/10 ehour/18 emin/00 title/Block Committee Audit` +
-Adds an event titled `Block Committee Audit` into the `OCT-2018.ics` calendar which starts on the `10th` at `1530` and ends on
-the `10th` at `1800`.
-
 Before executing command
 
 image::add_event_diagram_before.png[width="790"]
 
-After executing command
+* `add_event month/Oct year/2018 sdate/10 shour/15 smin/30 edate/10 ehour/18 emin/00 title/Block Committee Audit` +
+Adds an event titled `Block Committee Audit` into the `OCT-2018.ics` calendar which starts on the `10th` at `1530` and ends on
+the `10th` at `1800`.
 
 image::add_event_diagram_after.png[width="790"]
 
@@ -406,7 +402,7 @@ Format: `delete_event month/MMM year/YYYY sdate/DD edate/DD title/NAME OF EVENT`
 
 ****
 * An event is considered identical when it has the same start date, end date and title. Regardless of starting time and ending time.
-*  The MONTH *must be specified as MMM*.
+* The MONTH *must be specified as MMM*.
 * The MONTH *is not case-sensitive*.
 * The YEAR *must be specified as YYYY*.
 * The DATE *must be specified as DD*.
@@ -434,6 +430,12 @@ image::delete_event_diagram_after_valid.png[width="790"]
 
 Loads the specified monthly calendar `.ics` file into the UI. UI by default displays the current week. +
 Format: `view_calendar month/MMM year/YYYY`
+
+****
+* The MONTH *must be specified as MMM*.
+* MONTH *is not case-sensitive*.
+* The YEAR *must be specified as YYYY*.
+****
 
 Example:
 
