--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1014,13 +1014,25 @@ See this https://github.com/se-edu/System-level4/pull/599[PR] for the step-by-st
 
 *Target user profile*:
 
-* has a need to manage a significant number of contacts
-* prefer desktop apps over other types
-* can type fast
-* prefers typing over mouse input
+Typical university student who
+* needs to manage a significant number of contacts from various social circles in and out of school
+* is usually kept busy due to many classes from different faculties and/or other commitments
+* finds it difficult to juggle the task of contacting different members across different module projects
+* finds it difficult to determine convenient timings / locations for meetings
+* is reasonably comfortable with Command Line Interface (CLI) apps
+* prefers typing to mouse input
 * is reasonably comfortable using CLI apps
+* can type fast
+* prefers desktop apps
 
-*Value proposition*: manage contacts faster than a typical mouse/GUI driven app
+*Value proposition*: A convenient and time-saving command-line interface event manager for university students
+
+Our enhanced Addressbook application will offer its users the following benefits:
+* Avoid contact duplication, so the user has a clean and well-maintained address book.
+* Provide suggested locations and timings for events or meetings based on participants’ locations and timetable. This eases for the user the process of asking people for available timings / places to meet, by automating it.
+* Notifications to alert the user to favourited events
+* Allow the user to import contacts from an external source
+* Allow the user to manage events in the address book.
 
 [appendix]
 == User Stories
@@ -1195,7 +1207,7 @@ Use case ends.
 Use case ends.
 
 [discrete]
-=== UC5: Add personal events
+=== UC5: Add events
 
 *MSS*
 
@@ -1208,6 +1220,47 @@ Use case ends.
 +
 ** 1a1. System shows a message informing the user of the clash.
 
+Use case ends.
+
+[discrete]
+=== UC7: View all events
+
+*MSS*
+
+. User requests to view all events.
+. System displays all events.
++
+
+Use case ends.
+
+*Extensions*
+
+* 1a. User enters invalid command.
++
+** 1a1. System displays error message.
++
+Use case ends.
+
+[discrete]
+=== UC8: Delete an event
+
+Guarantees: Only the selected event will be deleted from the existing list.
+
+*MSS*
+
+.	User requests to delete an event.
+.	System removes the event from the user’s personal list of events.
+.	System displays message showing that the event is deleted.
++
+
+Use case ends.
+
+*Extensions*
+
+* 1a. User enters invalid event identifier or invalid command.
++
+** 1a1. System displays error message.
++
 Use case ends.
 
 [discrete]
@@ -1267,53 +1320,6 @@ Use case ends.
 
 ////
 === Coming in V2.0
-
-[discrete]
-=== UC7: View all personal events
-
-*MSS*
-
-. User requests to view all events.
-. System displays all events.
-+
-
-Use case ends.
-
-*Extensions*
-
-* 1a. User enters invalid command.
-+
-** 1a1. System displays error message.
-+
-Use case ends.
-
-[discrete]
-=== UC8: Delete personal events
-
-Guarantees: Only the selected event will be deleted from the existing list.
-
-*MSS*
-
-.	User requests to delete a personal event.
-.	System removes the event from the user’s personal list of events.
-.	System displays message showing that the event is deleted.
-+
-
-Use case ends.
-
-*Extensions*
-
-* 1a. User enters invalid personal event or invalid command.
-+
-** 1a1. System displays error message.
-+
-Use case ends.
-+
-* a. At any time, user chooses to end the command.
-+
-** a1. System abandons the meeting being set up, and returns to original screen.
-+
-Use case ends.
 
 [discrete]
 === UC9: Find groups by keyword
