--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1032,7 +1032,7 @@ Our enhanced Addressbook application will offer its users the following benefits
 * Provide suggested locations and timings for events or meetings based on participants’ locations and timetable. This eases for the user the process of asking people for available timings / places to meet, by automating it.
 * Notifications to alert the user to favourited events
 * Allow the user to import contacts from an external source
-* Allow the user to manage events in the address book.
+* Allow the user to manage events neatly in the address book, so that he/she can avoid event clashes.
 
 [appendix]
 == User Stories
