--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -512,22 +512,24 @@ The UI has been redesigned to implement the following UI elements required for t
 
 Animations will also be incorporated into the UI elements for a better user experience.
 
-==== Budget Panel
+==== totalBudget Panel
 
-The budget panel consists of 3 UI elements:
+The `totalBudget` panel consists of 3 UI elements:
 
 *	`BudgetPanel#expenseDisplay` – A `Text` element that displays the user’s current expenses.
 *	`BudgetPanel#budgetDisplay` – A `Text` element that displays the user’s monthly budget cap.
-*	`BudgetPanel#budgetBar` – A `progressBar` element that visually presents the percentage of the current budget cap that has been used.
+*	`BudgetPanel#budgetBar` – A `progressBar` element that visually presents the percentage of the current
+`totalBudget` cap that has been used.
 
 Given below is an example scenario of how `BudgetPanel` is updated:
 
 . The user launches the application and signs up for a new account. The `MainWindow` creates a new `BudgetPanel`, which elements are initialized as follows:
 * `BudgetPanel#expenseDisplay` is green and set to "$0.00".
-* `BudgetPanel#budgetDisplay` is set to "/ $28.00", with $28.00 being the default budget.
+* `BudgetPanel#budgetDisplay` is set to "/ $28.00", with $28.00 being the default `totalBudget`.
 * `BudgetPanel#budgetBar` is green and at 0% progress.
 
-. The user executes the command `add n/Lunch $/30.00 c/Food`. As the `'add` command modifies the budget and expenses, `AddCommand#execute()` will post a `UpdateBudgetPanelEvent` event to the EventsCenter.
+. The user executes the command `add n/Lunch $/30.00 c/Food`. As the `'add` command modifies the `totalBudget` and
+expenses, `AddCommand#execute()` will post a `UpdateBudgetPanelEvent` event to the EventsCenter.
 [NOTE]
 If a command fails its execution, the `UpdateBudgetPanelEvent` will not be posted.
 
@@ -546,9 +548,11 @@ If the updated percentage is more than 1.0, `BudgetPanel#budgetBar` progress per
 
 . `Timeline#playFromStart()` is called to execute the animation.
 
-. `BudgetPanel#update()` also calls `BudgetPanel#setBudgetUiColors()``. The method detects that the user has gone over budget, and changes the color of `BudgetPanel#expenseDisplay` and `BudgetPanel#budgetBar` from green to red.
+. `BudgetPanel#update()` also calls `BudgetPanel#setBudgetUiColors()`. The method detects that the user has gone
+over budget, and changes the color of `BudgetPanel#expenseDisplay` and `BudgetPanel#budgetBar` from green to red.
 [NOTE]
-Similarly, if the user has gone from over budget to under budget, the color of 'BudgetPanel#expenseDisplay` and `BudgetPanel#budgetBar` should change from red to green.
+Similarly, if the user has gone from over budget to under budget, the color of
+'BudgetPanel#expenseDisplay` and `BudgetPanel#budgetBar` should change from red to green.
 
 The following sequence diagram shows the process of updating the `BudgetPanel` UI elements:
 
@@ -574,7 +578,7 @@ image::implementation/BudgetPanelSequenceDiagram.png[width="800"]
 The budget feature allows the user to set a budget for a specific time period.
 If the user's total spending exceeds their budget in the specified time period, a warning will be shown to the user.
 
-The current implementation for budget tracking is described as below.
+The current implementation for `totalBudget` tracking is described as below.
 
 ===== Setting a budget
 
@@ -604,8 +608,7 @@ nothing will be done.
 
 * Recurrence time is set by `setRecurrenceFrequency()`. If it has not been set before, the next recurrence time will
 be set to `currentTime` + `recurrenceFrequency`.
-* If it has already been set, the timing will be updated on the next occurence time
-//TODO: ADD DIAGRAM TO SHOW THIS
+* If it has already been set, the timing will be updated on the next occurrence time
 
 Given below is a sequence diagram and step by step explanation of how the expense tracker executes when a user sets a recurrence frequency.
 
@@ -632,19 +635,33 @@ returned to
 `LogicManager`.
 
 . `LogicManager` then calls `SetRecurringBudgetCommand#execute()`,which calls `ModelManager#setRecurrenceFrequency()`
-method to update the time where the next budget is reset.
+method to update the time when the next spendings of `totalBudget` is reset.
+
+===== Budget by Category
+. User enters command `addCategoryBudget c/School b/2.00`. The command is received by `ExpenseTrackerParser`
+
+. `ExpenseTrackerParser` will then create a `AddCategoryBudgetCommandParser` Object and calls
+`AddCategoryBudgetCommandParser#parse()` method.
+
+. `AddCategoryBudgetCommandParser#parse()` method calls `ArgumentTokenizer#tokenize()` to tokenize the input String
+into keywords and store them in an `ArgumentMultimap` Object.
+
+. `AddCategoryBudgetCommandParser#parse()` method then calls `AddCategoryBudgetCommandParser#arePrefixesPresent()`
+method. If any of the keywords are missing, `ParseException` will be thrown.
+
+. From the previous step, if no exception is thrown, an `AddCategoryBudgetCommand` Object with `category` and `budget`
+ is created and returned to `LogicManager`.
+
+. `LogicManager` then calls `AddCategoryBudgetCommand#execute()`,which calls `ModelManager#addCategoryBudget()`
+method to add a `Budget` to a `Category`.
 
 ===== Notification center (Proposed)
 There is an area for the app to display notifications and additional information to the users beside the usual
 area below the command box. This is particularly useful to the *Budget* feature as budgets should not obstruct the
-usage of the expense tracker, but rather provide helpful information. For example, if a user exceeds his budget after
+usage of the expense tracker, but rather provide helpful information. For example, if a user exceeds his total budget
+ after
  adding an expense, a warning would be displayed in the *Notification center* instead of the area below the command
  box, replacing the success message of adding an expense and confusing the user.
-
-===== Budget by Category (Proposed)
-Users can now allocate their budgets by categories. This means that within a fixed budget, they can decide how big of
- a proportion a certain category of expense takes. Every `Category` will now have a `Budget` and the total budget in
- `ModelManager` will never exceed the sum of all budgets in `Category`.
 
 ==== Alternatives considered
 Recurrence check was initially implemented via events. Every time `ModelManager#loadUserData()` is called, an event
@@ -911,13 +928,15 @@ Priorities: High (must have) - `* * \*`, Medium (nice to have) - `* \*`, Low (un
 
 |`* * *` |user |have my expenditures saved after closing the app |keep track of my expenditures without having to key in my information again
 
-|`* * *` |forgetful user |receive a notification about my budget when the application boots up |be reminded of how much I have spent and can spend.
+|`* * *` |forgetful user |receive a notification about my budge twhen the application boots up |be reminded of how
+much I have spent and can spend.
 
 |`* * *` |user |exit the application with a keyboard command | exit the application conveniently without reaching for my mouse/touchpad
 
-|`* * *` |impulsive spender |set my maximum budget over a certain period of time |know when I am or about to spend over my budget
+|`* * *` |impulsive spender |set my maximum budget over a certain period of time |know when I am or about to spend
+over my `totalBudget
 
-|`* * *` |user who has a limited budget |view my expenses over a certain period of time |learn from my past endeavours and better manage my budget
+|`* * *` |user who has a limited budget|view my expenses over a certain period of time |learn from my past endeavours and better manage my `totalBudget
 
 |`* * *` |user who wants to save money |separate my expenses into different categories| ee where am I spending more money on and where my expenses go and cut them accordingly
 
@@ -944,7 +963,7 @@ _{More to be added}_
 
 1. User adds expenditure record
 2. Once validated, ExpenseTracker shows success message and details of the expenditure
-3. If expenditure causes budget to be below a certain threshold, show a warning message to the user
+3. If expenditure causes `totalBudget` to be below a certain threshold, show a warning message to the user
 +
 Use case ends.
 
@@ -980,13 +999,13 @@ Use case ends
 Use case ends
 
 [discrete]
-=== Use case: Set budget
+=== Use case: Set `totalBudget`
 
 *MSS*
 
-1. User requests to set budget
-2. Expense tracker prompts user to key in budget
-3. User keys in budget value
+1. User requests to set `totalBudget`
+2. Expense tracker prompts user to key in `totalBudget`
+3. User keys in `totalBudget` value
 4. Expense tracker prompts and updates budgets
 +
 Use case ends
@@ -995,7 +1014,7 @@ Use case ends
 [none]
 * 2a. Budget is already set
 [none]
-** 2a1. Expense tracker prompts user the previously set budget and asks if user wants to continue
+** 2a1. Expense tracker prompts user the previously set `totalBudget` and asks if user wants to continue
 ** 2a2. User confirmed that he/she wants to continue
 +
 Use case resumes step 2
@@ -1062,9 +1081,9 @@ Use case ends
 
 *MSS*
 
-1. User requests to clear his recorded expenses and budget
+1. User requests to clear his recorded expenses and `totalBudget`
 2. Expense trackers shows a confirmation message
-3. Expense tracker deletes all information about the current user’s budget and expenses
+3. Expense tracker deletes all information about the current user’s `totalBudget` and expenses
 +
 Use case ends
 
@@ -1085,10 +1104,10 @@ Use case ends
 *MSS*
 
 1. User keys in the command to turn on notifications
-2. Expense tracker already has a budget set.
-3. Add expenses until the budget has been exceeded
-4. Expense tracker will detect that the budget has been exceeded
-5. Expense tracker will show a visible notification to alert the user that the budget has been exceeded
+2. Expense tracker already has a `totalBudget` set.
+3. Add expenses until the `totalBudget` has been exceeded
+4. Expense tracker will detect that the `totalBudget` has been exceeded
+5. Expense tracker will show a visible notification to alert the user that the `totalBudget` has been exceeded
 +
 Use case ends
 
@@ -1098,7 +1117,7 @@ Use case ends
 *MSS*
 
 1. User keys in command to turn off notifications
-2. Notifications no longer show whenever the set budget has been exceeded.
+2. Notifications no longer show whenever the set `totalBudget` has been exceeded.
 3. Any notification that is currently showing will be hidden from the user.
 +
 Use case ends
@@ -1120,7 +1139,7 @@ Use case ends
 
 *MSS*
 
-1. User keys in command to view the information and statistics of his weekly/monthly/yearly budget
+1. User keys in command to view the information and statistics of his weekly/monthly/yearly `totalBudget`
 2. Programs loads a window consisting of visual information displaying the relevant information
 +
 Use case ends
