--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -544,6 +544,9 @@ There is no need to save manually.
 *Q*: How do I transfer my data to another computer? +
 *A*: Install the application in the other computer and overwrite the empty data file it creates with the file that contains the data of your previous CLInic folder.
 
+*Q*: Why can't I execute the `finish` command even if there is a Current Patient? +
+*A*: You are required to add notes to the Current Patient before using the `finish` command, use the `docAdd` command to add notes.
+
 == Command Summary
 
 === Patient
