--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -320,6 +320,84 @@ The `Storage` component can perform the following functions:
 
 This section describes some noteworthy details on how certain features are implemented.
 
+=== Undo/Redo feature
+==== Current Implementation
+
+The undo/redo mechanism is facilitated by `VersionedCarparkFinder`.
+It extends `CarparkFinder` with an undo/redo history, stored internally as an `carparkFinderStateList` and `currentStatePointer`.
+Additionally, it implements the following operations:
+
+* `VersionedCarparkFinder#commit()` -- Saves the current car park finder state in its history.
+* `VersionedCarparkFinder#undo()` -- Restores the previous car park finder state from its history.
+* `VersionedCarparkFinder#redo()` -- Restores a previously undone car park finder state from its history.
+
+These operations are exposed in the `Model` interface as `Model#commitCarparkFinder()`, `Model#undoCarparkFinder()` and `Model#redoCarparkFinder()` respectively.
+
+Given below is an example usage scenario and how the undo/redo mechanism behaves at each step.
+
+Step 1. The user launches the application for the first time. The `VersionedCarparkFinder` will be initialized with the initial address book state, and the `currentStatePointer` pointing to that single address book state.
+
+image::UndoRedoActivityDiagramNew1.png[width="800"]
+
+Step 2. The user executes `find sengkang` command to find list of car park which contain sengkang from the car park finder. The `find` command calls `Model#updateFilteredCarparkList()`, causing the modified state of the address book after the `find sengkang` command executes to be saved in the `carparkFinderStateList`, and the `currentStatePointer` is shifted to the newly inserted address book state.
+
+image::UndoRedoActivityDiagramNew2.png[width="800"]
+
+Step 3. The user executes `clear` to clear all entries. The `clear` command also calls `Model#commitCarparkFinder()`, causing another modified address book state to be saved into the `carparkFinderStateList`.
+
+image::UndoRedoActivityDiagramNew3.png[width="800"]
+
+[NOTE]
+If a command fails its execution, it will not call `Model#commitCarparkFinder()`, so the car park finder state will not be saved into the `carparkFinderStateList`.
+
+Step 4. The user now decides that adding the person was a mistake, and decides to undo that action by executing the `undo` command. The `undo` command will call `Model#undoCarparkFinder()`, which will shift the `currentStatePointer` once to the left, pointing it to the previous address book state, and restores the address book to that state.
+
+image::UndoRedoActivityDiagramNew4.png[width="800"]
+
+[NOTE]
+If the `currentStatePointer` is at index 0, pointing to the initial car park finder state, then there are no previous address book states to restore. The `undo` command uses `Model#canUndoCarparkFinder()` to check if this is the case. If so, it will return an error to the user rather than attempting to perform the undo.
+
+The following sequence diagram shows how the undo operation works:
+
+image::Sequence Diagram - Undo.png[width="800"]
+
+The `redo` command does the opposite -- it calls `Model#redoCarparkFinder()`, which shifts the `currentStatePointer` once to the right, pointing to the previously undone state, and restores the address book to that state.
+
+[NOTE]
+If the `currentStatePointer` is at index `carparkFinderStateList.size() - 1`, pointing to the latest address book state, then there are no undone address book states to restore. The `redo` command uses `Model#canRedoCarparkFinder()` to check if this is the case. If so, it will return an error to the user rather than attempting to perform the redo.
+
+Step 5. The user then decides to execute the command `list`. Commands that do not modify the address book, such as `list`, will usually not call `Model#commitCarparkFinder()`, `Model#undoCarparkFinder()` or `Model#redoCarparkFinder()`. Thus, the `carparkFinderStateList` remains unchanged.
+
+image::UndoRedoActivityDiagramNew5.png[width="800"]
+
+Step 6. The user executes `clear`, which calls `Model#commitCarparkFinder()`. Since the `currentStatePointer` is not pointing at the end of the `carparkFinderStateList`, all car park finder states after the `currentStatePointer` will be purged. We designed it this way because it no longer makes sense to redo the `find sengkang` command. This is the behavior that most modern desktop applications follow.
+
+image::UndoRedoActivityDiagramNew6.png[width="800"]
+
+The following activity diagram summarizes what happens when a user executes a new command:
+
+image::General new command.png[width="650"]
+
+==== Design Considerations
+
+===== Aspect: How undo & redo executes
+
+* **Alternative 1 (current choice):** Saves the entire car park finder.
+** Pros: Easy to implement.
+** Cons: May have performance issues in terms of memory usage.
+* **Alternative 2:** Individual command knows how to undo/redo by itself.
+** Pros: Will use less memory (e.g. for `select`, just save the car park being selected).
+** Cons: We must ensure that the implementation of each individual command are correct.
+
+===== Aspect: Data structure to support the undo/redo commands
+
+* **Alternative 1 (current choice):** Use a list to store the history of car park finder states.
+** Pros: Easy for new Computer Science student undergraduates to understand, who are likely to be the new incoming developers of our project.
+** Cons: Logic is duplicated twice. For example, when a new command is executed, we must remember to update both `HistoryManager` and `VersionedCarparkFinder`.
+* **Alternative 2:** Use `HistoryManager` for undo/redo
+** Pros: We do not need to maintain a separate list, and just reuse what is already in the codebase.
+** Cons: Requires dealing with commands that have already been undone: We must remember to skip these commands. Violates Single Responsibility Principle and Separation of Concerns as `HistoryManager` now needs to do two different things.
+
 === Query feature
 
 The query features updates the car park information.
