--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -18,14 +18,18 @@ endif::[]
 By: `Team CS2103-W14-2`      Since: `Sep 2018`      Licence: `MIT`
 
 == Introduction
-Welcome to the documentation for ThanePark. The purpose of this documentation is to assist you in their
-transition to begin developmental work on this application. If you are a developer looking to *adopt this application* for their
-own uses, go to <<Setting up, *`Setting up`*>>. If you wish to *contribute to the current application*, go to <<Dev Ops, *`Developing the application`*>>.
-If you wish to *update documentation* of this application, go to <<Documentation,*`Documentation`*>>.
+Welcome to ThanePark!
+The purpose of this documentation is to assist you in your transition to begin developmental work on ThanePark.
+
+If you are a developer looking to adopt ThanePark for your own uses, go to <<Setting up, *`Setting up`*>>.
+
+If you wish to contribute to ThanePark, go to <<Dev Ops, *`Developing the application`*>>.
+
+If you wish to update documentation of ThanePark, go to <<Documentation,*`Documentation`*>>.
 
 == About
-ThanePark is *a desktop application* for *theme park management*. The application is optimized for *keyboard-oriented*
-users and retains *user-friendly graphics* that informs users of their decisions *in a glance*.
+ThanePark is a desktop application for theme park management. The application is optimized for keyboard-oriented
+users and retains user-friendly graphics that informs users of their decisions in a glance.
 
 == Setting up
 Before you get started on development on the application, you will need to complete the following steps below.
@@ -125,7 +129,7 @@ This section will help you better understand the software architecture of ThaneP
 === Architecture
 
 .Architecture Diagram
-image::Architecture.png[width="600"]
+image::Architecture.png[width="800"]
 
 The *_Architecture Diagram_* given above explains the high-level design of the App.
 It shows the various interactions between <<Design-Main,*`Main`*>> and 4 other components:
@@ -323,7 +327,7 @@ image::UndoRedoNewCommand4StateListDiagram.png[width="800"]
 
 The following activity diagram summarizes what happens when a user executes a new command:
 
-image::UndoRedoActivityDiagram.png[width="650"]
+image::UndoRedoActivityDiagram.png[width="800"]
 
 ==== Design Considerations
 
@@ -345,6 +349,114 @@ image::UndoRedoActivityDiagram.png[width="650"]
 ** Pros: We do not need to maintain a separate list, and just reuse what is already in the codebase.
 ** Cons: Requires dealing with commands that have already been undone: We must remember to skip these commands. Violates Single Responsibility Principle and Separation of Concerns as `HistoryManager` now needs to do two different things.
 // end::undoredo[]
+
+=== Filter Feature
+==== Current Implementation
+.Activity Diagram for the Filter Feature
+image::FilterActivityDiagram.png[width="800"]
+The filter function is being implemented with the help of `FilterCommand` and `AttributePredicate` class. When the
+`ThaneParkParser` parses the user input and finds the filter command word `filter` it calls a new `FilterCommandParser` to
+parse the arguments from the user input.
+
+It checks if there are any of the maintenance or waiting time prefix in the arguments. If any of the prefixes are present,
+an `AttributePredicate` is created with the operator (‘<’ or ‘>’) and the attribute they are checking for (ie
+`Maintenance` or `WaitTime`). The AttributePredicates are added to a list. The user can add any amount of predicates that
+they want, like 3 predicates e.g. `filter w/< 50 w/ > 5 m/>10` and the list would contain 3 predicates and if the user
+decides to input only one predicate, the list will only contain one.
+
+A new `RideContainsConditionPredicate` is instantiated with the list of AttributePredicates. The `FilterCommandParser` will
+return a new `FilterCommand` with the `RideContainsConditionPredicate` in it.
+
+The LogicManager execute the command, and the `RideContainsConditionPredicate` will be set as the predicate to filter
+the list of rides and it will check if the ride fulfils the required predicate(s). After that a list of filtered rides
+would be returned after each ride is tested with the predicate.
+
+==== Design Considerations
+
+===== Aspect: Data structure to support filter commands
+* **Alternative 1(Current Choice):** Abstracting attributes that contain numeric values into a separate class and creating a
+AttributePredicate to test the attribute
+** Pros: Easier to add more numeric attributes and minimal changes required to filter new attributes
+** Cons: Need to implement more classes to handle
+
+* **Alternative 2:** Gives the entire string condition to the RideContainsConditionPredicate to test.
+** Pros: Easier to implement as classes no need to abstracted
+** Cons: RideContainsConditionPredicate would carry out parsing functions which would make it less cohesive
+
+
+
+
+// tag::autocompletesuggest[]
+=== Autocomplete/Suggest Feature
+==== Current Implementation
+
+The *autocomplete/suggest* mechanism is facilitated by `SuggestCommand`.
+It extends `Command` and serves as a special kind of `Command` that cannot be directly invoked by the `LogicManager`.
+A new instance of `SuggestCommand` is created whenever `ThaneParkParser` fails to find a matching CommandWord,
+or when kbd:[TAB] is pressed inside the *Command Box*. See the 2 figures below:
+
+.Activity Diagram of user executing command
+image::AutocompleteSuggestActivityDiagram1.png[width="800"]
+
+.Activity Diagram of user pressing tab
+image::AutocompleteSuggestActivityDiagram2.png[width="800"]
+
+The application will then proceed with executing the `SuggestCommand`, which returns prefix-matched `Command` s.
+These matching `Command` s are reflected in both `CommandResult` and `ShowHelpRequestEvent`, which will in turn update
+`ResultDisplay` and `CommandBox` text. See figure below:
+
+.Activity Diagram of user pressing tab
+image::AutocompleteSuggestActivityDiagram3.png[width="800"]
+
+==== Design Considerations
+
+===== Aspect: Handling kbd:[Tab] autocomplete
+
+* **Alternative 1 (current choice):** Handle autocomplete through events and `SuggestCommand`.
+** Pros: Flexible. Easy to modify event behaviors for `SuggestCommandEvent` and `NewResultAvailableEvent`. Modular design that
+can be easily reused to create other autocomplete features.
+** Cons: Difficult to implement as it requires some understanding of the `EventsCenter` and handling of the various
+Event types in the application.
+* **Alternative 2:** Handle everything in `CommandBox`.
+** Pros: Easy to implement.
+
+** Cons: Difficult to extend. When modifying behavior of `CommandBox` text autocompletion, may have to modify behavior
+for result listing of results in `ResultDisplay`.
+// end::autocompletesuggest[]
+
+// tag::viewstatus[]
+=== View Status Feature
+==== Current Implementation
+
+The view status function is being implemented with the help of `ViewStatusCommand` and `RideStatusPredicate` class.
+When the `ThaneParkParser` parses the user input and finds the view status command word *viewstatus*, it calls a new `ViewStatusCommandParser` to parse the arguments from the user input.
+
+.Activity Diagram of `ViewStatusCommandParser`
+image::ViewStatusActivityDiagram.png[width="800"]
+
+As seen in the diagram above, the `ViewStatusCommandParser` class checks the arguments for keywords relating to the status of the rides.
+If there are more than one strings found or the argument string is not one of the three statuses,
+it will throw a `ParseException`, letting the user know that the command format is wrong.
+Conversely, it will compare the argument with the statuses and create a `Status` enumeration.
+
+A new `RideStatusPredicate` is instantiated with the `Status` enumeration.
+The `ViewStatusCommandParser` will return a new `ViewStatusCommand` containing `RideStatusPredicate`.
+
+The `LogicManager` execute the command, and uses the `RideStatusPredicate` to filter the list of rides for rides that fulfill the required predicate(s).
+A list of filtered rides would be returned.
+
+==== Design Considerations
+
+===== Aspect: Data structure to support view status command
+* **Alternative 1(Current choice):** Handle checking of status by passing the `Status` enumeration to `RideStatusPredicate` to test.
+** Pros: Code is more cohesive as each class is more focused.
+** Cons: More classes are required to implement the check.
+
+* **Alternative 2:** Handle checking of status in ViewStatusCommand by using a lambda expression to express the predicate.
+** Pros: Easier to implement as less classes are needed.
+** Cons: Reduced modularity as predicate logic is not abstracted.
+
+// end::viewstatus[]
 
 // tag::dataencryption[]
 === [Proposed] Data Encryption
@@ -373,79 +485,7 @@ We are using `java.util.logging` package for logging. The `LogsCenter` class is 
 
 Certain properties of the application can be controlled (e.g App name, logging level) through the configuration file (default: `config.json`).
 
-=== Filter Feature
-==== Current Implementation
-.Activity Diagram for the Filter Feature
-image::FilterActivityDiagram.png[width="800"]
-The filter function is being implemented with the help of `FilterCommand` and `AttributePredicate` class. When the
-`ThaneParkParser` parses the user input and finds the filter command word `filter` it calls a new `FilterCommandParser` to
-parse the arguments from the user input.
 
-It checks if there are any of the maintenance or waiting time prefix in the arguments. If any of the prefixes are present,
-an `AttributePredicate` is created with the operator (‘<’ or ‘>’) and the attribute they are checking for (ie
-`Maintenance` or `WaitTime`). The AttributePredicates are added to a list. The user can add any amount of predicates that
-they want, like 3 predicates e.g. `filter w/< 50 w/ > 5 m/>10` and the list would contain 3 predicates and if the user
-decides to input only one predicate, the list will only contain one.
-
-A new `RideContainsConditionPredicate` is instantiated with the list of AttributePredicates. The `FilterCommandParser` will
-return a new `FilterCommand` with the `RideContainsConditionPredicate` in it.
-
-The LogicManager execute the command, and the `RideContainsConditionPredicate` will be set as the predicate to filter
-the list of rides and it will check if the ride fulfils the required predicate(s). After that a list of filtered rides
-would be returned after each ride is tested with the predicate.
-
-==== Design Considerations
-
-===== Aspect: Data structure to support filter commands
-* **Alternative 1:** Gives the entire string condition to the RideContainsConditionPredicate to test.
-** Pros: Easier to implement as classes no need to abstracted
-** Cons: RideContainsConditionPredicate would carry out parsing functions which would make it less cohesive
-
-* **Alternative 2(Current Choice):** Abstracting attributes that contain numeric values into a separate class and creating a
-AttributePredicate to test the attribute
-** Pros: Easier to add more numeric attributes and minimal changes required to filter new attributes
-** Cons: Need to implement more classes to handle
-
-
-// tag::autocompletesuggest[]
-=== Autocomplete/Suggest feature
-==== Current Implementation
-
-The *autocomplete/suggest* mechanism is facilitated by `SuggestCommand`.
-It extends `Command` and serves as a special kind of `Command` that cannot be directly invoked by the `LogicManager`.
-A new instance of `SuggestCommand` is created whenever `ThaneParkParser` fails to find a matching CommandWord,
-or when kbd:[TAB] is pressed inside the *Command Box*. See the 2 figures below:
-
-.Activity Diagram of user executing command
-image::AutocompleteSuggestActivityDiagram1.png[width="650"]
-
-.Activity Diagram of user pressing tab
-image::AutocompleteSuggestActivityDiagram2.png[width="650"]
-
-The application will then proceed with executing the `SuggestCommand`, which returns prefix-matched `Command` s.
-These matching `Command` s are reflected in both `CommandResult` and `ShowHelpRequestEvent`, which will in turn update
-`ResultDisplay` and `CommandBox` text. See figure below:
-
-.Activity Diagram of user pressing tab
-image::AutocompleteSuggestActivityDiagram3.png[width="650"]
-
-==== Design Considerations
-
-===== Aspect: Handling kbd:[TAB] autocomplete
-
-* **Alternative 1 (current choice):** Handle autocomplete through events and `SuggestCommand`.
-** Pros: Flexible. Easy to modify event behaviors for `SuggestCommandEvent` and `NewResultAvailableEvent`. Modular design that
-can be easily reused to create other autocomplete features.
-** Cons: Difficult to implement as it requires some understanding of the `EventsCenter` and handling of the various
-Event types in the application.
-* **Alternative 2:** Handle everything in `CommandBox`.
-** Pros: Easy to implement.
-
-** Cons: Difficult to extend. When modifying behavior of `CommandBox` text autocompletion, may have to modify behavior
-for result listing of results in `ResultDisplay`.
-// end::autocompletesuggest[]
-
-[Documentation]
 == Documentation
 
 Asciidoc was used for writing documentation.
@@ -606,7 +646,6 @@ e.g. `seedu.address.logic.LogicManagerTest`
 * Reason: One of its dependencies, `HelpWindow.html` in `src/main/resources/docs` is missing.
 * Solution: Execute Gradle task `processResources`.
 
-[Dev Ops]
 == Dev Ops
 
 === Build Automation
@@ -991,12 +1030,12 @@ Use case ends.
 none
 
 [discrete]
-=== Use case: Quickview
+=== Use case: View status of rides
 *System*: ThanePark +
 *Actor* All +
 *MSS*
 
-1.  User requests to view all attractions.
+1.  User requests to view attractions by status.
 2.  ThanePark shows a summarized view sorted by queue status.
 +
 Use case ends.
